--- a/packages/local_auth/pubspec.yaml
+++ b/packages/local_auth/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
     sdk: flutter
   meta: ^1.0.5
   intl: ">=0.15.1 <0.17.0"
-  platform: ^2.0.0
+  platform: ^3.0.0-nullsafety.2
   flutter_plugin_android_lifecycle: ^1.0.2
 
 dev_dependencies:
